fix pic path and some alignment issues

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <cite>- Harland, Founder of Cinnamon Angels</cite>
     </div>
     <div class="image">
-      <img src="/images/harland winking.jpg" alt="harland Image one">
+      <img src="images/harland winking.jpg" alt="harland Image one">
     </div>
   </div>
 
